# python-shared-ndarray

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  setup_build.py
src/shared_ndarray/: __init__.py  shared_ndarray.py  shared_ndarray.pyi
tests/: shared_ndarray_v1.py  test_mp_pipe.py  test_mp_queue.py  test_shared_memory.py  test_shared_memory_numpy.py  test_shared_mp_init.py  test_shared_ndarray.py  test_threading_queue.py
